--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,6 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  location: ^3.0.0
   cached_network_image: ^2.2.0+1
   animate_do: ^1.7.2
   shared_preferences: ^0.5.7+3
@@ -30,6 +29,7 @@ dependencies:
   mobx: ^1.2.1+1
   flutter_modular: ^1.2.7+1
   fluttertoast: ^7.0.1
+  permission_handler:
   flutter:
     sdk: flutter
 
